--- a/get-started/creative-vision.html
+++ b/get-started/creative-vision.html
@@ -7,15 +7,15 @@ title: 창조적인 비전
 
 
 <p>
-아이스크림 샌드위치(안드로이드 4.0)은 안드로이드 디자인에 있어서 중요한 이정표가 됩니다.
-픽셀 하나하나를 새로 만들었고, 허니컴에 도입되었던 새로운 디자인 방법론을 모바일 기기 전체에 확장했습니다.
-가장 기본적인 요소부터 보면, 우리는 Roboto라는 새로운 고해상도 디스플레이용 글꼴을 만들었습니다.
+아이스크림 샌드위치(안드로이드 4.0)는 안드로이드 디자인에 있어서 중요한 이정표가 됩니다.
+픽셀 하나하나를 새로 만들었고, 허니컴에 도입했던 새로운 디자인 방법론을 모바일 기기 전체에 확장했습니다.
+가장 기본적인 요소부터 보면, Roboto라는 새로운 고해상도 디스플레이용 글꼴을 만들었습니다.
 또한 폰을 위한 액션 바를 프레임워크 레벨에서 추가했으며, 물리적 버튼이 없는 폰을 위한 지원도 추가했습니다.
 </p>
 
 <p>
-우리는 이 디자인 작업에서 핵심 앱과 전체적인 시스템 레벨에 대한 세 가지 중요한 목표가 있다고 보았습니다.
-안드로이드에 앱을 만들 때에는 다음의 항목들을 고려해주세요.
+우리는 이 디자인 작업에서 핵심 앱 및 전체 시스템 레벨에서 세 가지 중요한 목표가 있다고 보았습니다.
+안드로이드 앱을 만들 때에는 다음의 항목들을 고려해주세요.
 </p>
 
 
@@ -39,8 +39,8 @@ title: 창조적인 비전
 
 <h4>생활을 편리하게</h4>
 <p>
-안드로이드 앱은 생활을 더 쉽게 만들어 주며, 이해하기 쉽습니다.
-여러분의 앱을 사용자가 처음 쓸 때, 가장 중요한 기능이 무엇인지 직관적으로 알 수 있어야 합니다.
+안드로이드 앱은 생활을 더 쉽게 만들어 주며, 이해하기 쉽게 되어 있습니다.
+사람들이 여러분의 앱을 처음 보자마자 가장 중요한 기능이 무엇인지 직관적으로 알 수 있어야 합니다.
 물론 그렇다고 해서 앱을 처음 켤 때만 다른 흐름으로 동작하는 건 아니지만요.
 안드로이드 앱에서는 파일 관리나 싱크와 같은 복잡한 일을 없앱니다.
 간단한 작업에 절대 복잡한 과정이 필요하지 않아야 하고, 복잡한 작업은 사람의 생각과 입력에 맞도록 되어 있습니다.
@@ -52,10 +52,10 @@ title: 창조적인 비전
 
 <h4>놀라운 경험을 만들어주세요</h4>
 <p>
-앱을 쓰기 편하게 만드는 것만으로는 충분하지 않습니다.
-안드로이드 앱은 사람들이 새로운 것들을 새로운 방식으로 사용할 수 있는 기회를 제공합니다.
+쓰기 편한 앱을 만드는 걸로는 충분하지 않습니다.
+안드로이드 앱은 사람들에게 새로운 것들을 새로운 방식으로 사용할 수 있는 기회를 제공합니다.
 안드로이드는 사용자가 멀티태스킹, 알림, 앱 간 공유 등을 통해 여러 앱을 조합하여 새로운 작업 흐름을 만들 수 있도록 합니다.
-그러면서도, 여러분의 앱은 개인에 딱 맞게 구성되어 사용자에게 새로운 기술을 명확하고 우아하게 제공하어야 합니다.
+그러면서도 여러분의 앱은 개인에 딱 맞게 구성되어 사용자에게 새로운 기술을 명확하고 우아하게 제공하어야 합니다.
 </p>
 
   </div>
