--- a/get-started/creative-vision.html
+++ b/get-started/creative-vision.html
@@ -27,11 +27,11 @@ title: 창조적 비전
 
 <h4>마법을 걸어 주세요</h4>
 <p>
-아름다움은 피상적인 것이 아닙니다.
-안드로이드 앱은 날렵하게 보이면서 여러 관점에서 미적인 즐거움을 얻을 수 있습니다.
-화면 전환은 빠르고 깔끔하며, 화면이나 글자는 정갈하고 유의미하게 배치되어 있습니다.
+아름다움은 피상적인 존재가 아닙니다.
+안드로이드 앱은 날렵해 보이면서도 여러 관점에서 미적인 즐거움을 얻을 수 있습니다.
+빠르고 깔끔한 화면 전환이 이루어지며 화면이나 글자가 정갈하고 유의미하게 배치되어 있습니다.
 앱 아이콘은 각자의 권리가 담긴 작품입니다.
-잘 만들어진 도구와 마찬가지로, 여러분의 앱은 아름답고 간단하면서도 쉽고 강력한 마술적 경험을 만든다는 목적을 달성하기 위해 노력해야 합니다.
+잘 만들어진 도구와 마찬가지로, 여러분은 앱에 아름답고 간단하면서도 쉽고 강력한 마술적 경험을 담는다는 목적을 달성하기 위해 노력해야 합니다.
 </p>
 
   </div>
@@ -39,12 +39,12 @@ title: 창조적 비전
 
 <h4>생활을 편리하게</h4>
 <p>
-안드로이드 앱은 생활을 더 쉽게 만들어 주며, 이해하기 쉽게 되어 있습니다.
+안드로이드 앱은 생활을 더 쉽게 만들어 주며 이해하기 쉽습니다.
 사람들이 여러분의 앱을 처음 보자마자 가장 중요한 기능이 무엇인지 직관적으로 알 수 있어야 합니다.
 물론 그렇다고 해서 앱을 처음 켤 때만 다른 흐름으로 동작하는 건 아니지만요.
 안드로이드 앱에서는 파일 관리나 싱크와 같은 복잡한 일을 없앱니다.
-간단한 작업에 절대 복잡한 과정이 필요하지 않아야 하고, 복잡한 작업은 사람의 생각과 입력에 맞도록 되어 있습니다.
-나이나 문화에 관계없이 사용자 누구나 안정적으로 조작할 수 있고, 절대 너무 많은 선택지나 불필요한 알림에 뒤덮이지 않아야 합니다.
+간단한 작업에는 절대로 복잡한 과정이 필요하지 않아야 하고, 복잡한 작업은 사람의 생각과 입력과 맞추어져 있습니다.
+누구든지 나이나 문화에 관계없이 안정적으로 조작할 수 있고, 절대로 수많은 선택지나 불필요한 알림이 사용자를 뒤덮지 않아야 합니다.
 </p>
 
   </div>
