--- a/get-started/creative-vision.html
+++ b/get-started/creative-vision.html
@@ -7,15 +7,14 @@ title: 창조적 비전
 
 
 <p>
-아이스크림 샌드위치(안드로이드 4.0)는 안드로이드 디자인에 있어서 중요한 이정표가 됩니다.
-픽셀 하나하나를 새로 만들었고, 허니컴에 도입했던 새로운 디자인 방법론을 모바일 기기 전체에 확장했습니다.
-가장 기본적인 요소부터 보면, Roboto라는 새로운 고해상도 디스플레이용 글꼴을 만들었습니다.
-또한 폰을 위한 액션 바를 프레임워크 레벨에서 추가했으며, 물리적 버튼이 없는 폰을 위한 지원도 추가했습니다.
+아이스크림 샌드위치(안드로이드 4.0)는 안드로이드 디자인의 중요한 이정표입니다.
+픽셀 하나하나를 새로 만들었고, 허니컴에 도입했던 새로운 디자인 방법론을 모바일 기기 전체로 확장했습니다.
+가장 기본적인 요소부터 보면, Roboto라는 고해상도 디스플레이용 글꼴을 새로 만들었습니다.
+또 폰을 위한 액션 바를 프레임워크 레벨에서 추가하고 물리 버튼이 없는 새 폰을 위한 지원도 추가했습니다.
 </p>
 
 <p>
-우리는 이 디자인 작업에서 핵심 앱 및 전체 시스템 레벨에서 세 가지 중요한 목표가 있다고 보았습니다.
-안드로이드 앱을 만들 때에는 다음의 항목들을 고려해주세요.
+우리는 핵심 앱 및 전체 시스템을 디자인할 때는 다음과 같은 세 가지 중요한 목표가 있다고 보았습니다.
 </p>
 
 
@@ -27,24 +26,24 @@ title: 창조적 비전
 
 <h4>마법을 걸어 주세요</h4>
 <p>
-아름다움은 피상적인 존재가 아닙니다.
+아름다움은 그저 눈에 보이는 것만은 아닙니다.
 안드로이드 앱은 날렵해 보이면서도 여러 관점에서 미적인 즐거움을 얻을 수 있습니다.
-빠르고 깔끔한 화면 전환이 이루어지며 화면이나 글자가 정갈하고 유의미하게 배치되어 있습니다.
+화면 전환은 빠르고 깔끔하게 이루어지며 화면과 글자는 정갈하고 유의미하게 배치되어 있습니다.
 앱 아이콘은 각자의 권리가 담긴 작품입니다.
-잘 만들어진 도구와 마찬가지로, 여러분은 앱에 아름답고 간단하면서도 쉽고 강력한 마술적 경험을 담는다는 목적을 달성하기 위해 노력해야 합니다.
+여러분의 앱은 마치 잘 만들어진 도구처럼 아름답고 간단하면서도 쉽고 강력한 마법과 같은 경험을 담는다는 목적을 달성하기 위해 노력해야 합니다.
 </p>
 
   </div>
   <div class="layout-content-col span-5">
 
-<h4>생활을 편리하게</h4>
+<h4>생활을 편리하게 해주세요</h4>
 <p>
-안드로이드 앱은 생활을 더 쉽게 만들어 주며 이해하기 쉽습니다.
-사람들이 여러분의 앱을 처음 보자마자 가장 중요한 기능이 무엇인지 직관적으로 알 수 있어야 합니다.
-물론 그렇다고 해서 앱을 처음 켤 때만 다른 흐름으로 동작하는 건 아니지만요.
-안드로이드 앱에서는 파일 관리나 싱크와 같은 복잡한 일을 없앱니다.
-간단한 작업에는 절대로 복잡한 과정이 필요하지 않아야 하고, 복잡한 작업은 사람의 생각과 입력과 맞추어져 있습니다.
-누구든지 나이나 문화에 관계없이 안정적으로 조작할 수 있고, 절대로 수많은 선택지나 불필요한 알림이 사용자를 뒤덮지 않아야 합니다.
+안드로이드 앱은 생활을 더 쉽게 만들어 주며 이해하기도 쉽습니다.
+사람들이 여러분의 앱을 보면 중요한 기능을 첫눈에 직관적으로 알 수 있어야 합니다.
+물론 앱을 처음 쓸 때만 그래야 하는 것은 아닙니다.
+안드로이드 앱은 파일 관리나 싱크와 같은 복잡한 일을 없앱니다.
+간단한 작업은 절대로 복잡한 과정이 필요하지 않고, 복잡한 작업은 사람의 생각과 입력과 맞추어져 있습니다.
+나이나 문화에 관계없이 누구나 확실하게 조작할 수 있고, 절대 수많은 선택지와 불필요한 알림의 늪에 빠지지 않습니다.
 </p>
 
   </div>
@@ -52,9 +51,9 @@ title: 창조적 비전
 
 <h4>놀라운 경험을 만들어주세요</h4>
 <p>
-쓰기 편한 앱을 만드는 걸로는 충분하지 않습니다.
-안드로이드 앱은 사람들에게 새로운 것들을 새로운 방식으로 사용할 수 있는 기회를 제공합니다.
-안드로이드는 사용자가 멀티태스킹, 알림, 앱 간 공유 등을 통해 여러 앱을 조합하여 새로운 작업 흐름을 만들 수 있도록 합니다.
+쓰기 편한 앱을 만드는 것만으로는 충분하지 않습니다.
+안드로이드 앱은 사람들이 새로운 것을 시도하고 독창적인 새 방식으로 앱을 사용할 기회를 제공합니다.
+안드로이드는 사용자가 멀티태스킹, 알림, 앱 간 공유 등을 이용해 여러 앱을 조합하여 새로운 작업 흐름을 만들 수 있도록 합니다.
 그러면서도 여러분의 앱은 개인에 딱 맞게 구성되어 사용자에게 새로운 기술을 명확하고 우아하게 제공하어야 합니다.
 </p>
 
