--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -5,13 +5,13 @@ title: UI 개요
 <p>앱을 만들면 그 위에 안드로이드의 시스템 UI의 프레임워크가 제공됩니다.
 시스템 UI의 주요 부분으로 홈 스크린 경험, 글로벌 디바이스 네비게이션, 그리고 알림이 있습니다.</p>
 
-<p>여러분의 앱은 전반적인 안드로이드 경험에 있어서 일관성과 즐거운 사용 면에서 중요한 역할을 차지하게 될 수 있습니다.
-따라서 우리는 이 장 끝 부분에서 앱이 이러한 목표를 달성하기 위해 필요한 주요 사항들을 소개하겠습니다.</p>
+<p>여러분의 앱은 전반적인 안드로이드 경험에 있어서 일관성과 즐거운 사용 면에서 중요한 역할을 할 것입니다.
+우리는 이 장 끝 부분에서 앱이 이러한 목표를 달성하기 위한 주요 사항들을 소개합니다.</p>
 
 <p>먼저 안드로이드 사용자 인터페이스의 주요 측면에 대해 간단히 개요를 훑어보도록 하겠습니다.</p>
 
 
-<h2 id="home-all-apps-recents">홈, 모든 앱, 그리고 최근 앱</h2>
+<h2 id="home-all-apps-recents">홈, 모든 앱, 최근 앱</h2>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -21,27 +21,27 @@ title: UI 개요
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_home_screen.png"><h4>홈 화면</h4>
-<p>홈은 앱 바로가기, 폴더와 위젯을 올려둘 수 있는 사용자 정의 가능 공간입니다.
+<p>홈은 사용자 정의가 가능한 앱 바로가기, 폴더, 위젯을 올려둘 수 있는 공간입니다.
 홈 화면에서 좌우로 스와이프하여 다른 홈 화면 패널을 살펴볼 수 있습니다.</p>
 <p>즐겨찾기 트레이는 항상 아랫쪽에 표시되어, 현재의 패널과 관계 없이 
-가장 중요한 바로 가기 및 폴더를 고정해 표시해줍니다.</p>
-<p>즐겨찾기 트레이 중앙에 위치한 모든 앱 버튼을 터치해 전체 앱 및 위젯 목록에 접근할 수 있습니다.</p>
+가장 중요한 바로 가기와 폴더를 고정해 표시해줍니다.</p>
+<p>즐겨찾기 트레이 중앙에 위치한 모든 앱 버튼을 터치해 전체 앱과 위젯 목록에 접근할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_all_apps.png"><h4>모든 앱 화면</h4>
 <p>모든 앱 화면에서 디바이스에 설치되어 있는 모든 앱과 위젯 전체 항목을 열람할 수 있습니다.</p>
-<p>사용자는 모든 앱 화면에서 앱이나 위젯 아이콘을 끌어 임의의 홈 화면 아무 빈 곳에나 배치할 수 있습니다.</p>
+<p>사용자는 모든 앱 화면에서 앱이나 위젯 아이콘을 끌어 홈 화면 빈 곳 어디에나 배치할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_recents.png"><h4>최근 앱(Recents) 화면</h4>
-<p>최근 앱은 최근에 사용했던 앱 간을 이동하는 효율적인 방법을 제공합니다.
-최근 앱은 여러 진행중인 작업 사이의 명확한 탐색 경로 또한 제공합니다.</p>
-<p>네비게이션 바 오른쪽에 위치한 최근 앱 버튼은 사용자가 최근에 작업한 순으로 앱 목록이 표시됩니다.
-이 목록은 가장 아랫쪽부터 가장 나중에 작업했던 앱이 역순으로 표시되어 구성됩니다.</p>
+<p>최근 앱은 최근에 사용한 앱 사이를 이동하는 효율적인 방법을 제공합니다.
+최근 앱은 진행중인 작업 사이의 명확한 탐색 경로도 제공합니다.</p>
+<p>네비게이션 바 오른쪽에 있는 최근 앱 버튼은 사용자가 최근에 작업한 순으로 앱 목록을 표시합니다.
+이 목록은 가장 최근에 작업한 앱을 아래부터 역순으로 표시합니다.</p>
 <p>앱을 터치해 해당 앱으로 전환할 수 있습니다. 좌나 우로 스와이프해서 항목을 지울 수도 있습니다.</p>
 
   </div>
@@ -51,10 +51,10 @@ title: UI 개요
 <h2 id="system-bars">시스템 바</h2>
 
 
-<p>시스템 바는 알림 표시, 디바이스 상태 안내 및 디바이스 네비게이션 전용 영역입니다.
-일반적으로 시스템 바는 우리의 앱과 동시에 표시됩니다.
+<p>시스템 바는 알림 표시, 디바이스 상태 안내, 디바이스 네비게이션을 위한 전용 영역입니다.
+일반적으로 시스템 바는 앱과 동시에 보입니다.
 영화나 이미지와 같이 몰입형 컨텐트를 제공하는 앱인 경우
-임시로 시스템 바를 숨겨 사용자가 혼란 없이 전체 화면으로 컨텐트를 즐길 수 있도록 할 수도 있습니다.</p>
+방해받지 않고 전체 화면으로 컨텐트를 즐길 수 있도록 임시로 시스템 바를 숨길 수도 있습니다.</p>
 
 
 <img src="../media/ui_overview_system_ui.png">
@@ -63,12 +63,12 @@ title: UI 개요
 <ol>
 <li>
 <h4>상태 표시줄</h4>
-<p>좌측에는 확인이 필요한 알림들이, 우측에는 시간이나 배터리 레벨, 혹은 신호 강도 상태 등이 표시됩니다.
+<p>왼쪽에는 확인이 필요한 알림을 표시하고 오른쪽에는 시간, 배터리 레벨, 신호 강도 상태 등을 표시합니다.
 상태 표시줄에서 아래로 스와이프해 세부 알림 사항을 볼 수 있습니다.</p>
 </li>
 <li>
 <h4>네비게이션 바</h4>
-<p>안드로이드 4.0에서 폰 용으로 추가된 네비게이션 바는 전통적인 하드웨어 키가 없는 디바이스에만 표시됩니다.
+<p>안드로이드 4.0에서 폰 용으로 추가된 네비게이션 바는 전통적인 하드웨어 키가 없는 디바이스에만 나타납니다.
 이전, 홈, 최근 앱이 배치되어 있으며 안드로이드 2.3 이하의 버전용으로 만들어진 앱의 메뉴 컨트롤도 표시됩니다.</p>
 </li>
 <li>
@@ -83,7 +83,7 @@ title: UI 개요
 
 
 <p>알림은 사용자가 상태 표시줄을 통해 언제든지 접근할 수 있는 짧은 메시지입니다.
-알림은 업데이트나 일정 알림, 또는 중요하지만 사용자를 방해할 정도는 아닌 정보를 제공합니다.
+알림은 업데이트, 일정 알림이나 중요하지만 사용자를 방해할 정도는 아닌 정보를 제공합니다.
 상태 표시줄을 아래로 스와이프해 알림 서랍(notifications drawer)을 엽니다.
 알림을 터치하면 해당 알림과 연관되어 있는 앱을 열게 됩니다.
 <a href="../patterns/notifications.html">알림에 대한 세부 사항</a></p>
@@ -96,10 +96,10 @@ title: UI 개요
 </div>
   <div class="layout-content-col span-9">
 
-    <img src="../media/notifications_dismiss.png"><p>대부분의 알림은 한 줄에 제목과 다른 한 줄에 메시지가 있습니다.
-알림을 위한 권장 레이아웃은 두 줄을 포함합니다. 만약 필요하다면, 세번째 줄도 추가할 수 있습니다.
+    <img src="../media/notifications_dismiss.png"><p>대부분의 알림은 제목 한 줄과 메시지 한 줄로 이루어집니다.
+권장하는 레이아웃은 알림을 두 줄로 구성하는 것입니다. 필요하다면 세 번째 줄도 추가할 수 있습니다.
 알림 시간 표시는 선택 사항입니다.</p>
-<p>좌나 우로 알림을 스와이프해 알림 서랍에서 알림을 지울 수 있습니다.</p>
+<p>왼쪽이나 오른쪽으로 알림을 스와이프해 알림 서랍에서 알림을 지울 수 있습니다.</p>
 
   </div>
 </div>
@@ -117,18 +117,18 @@ title: UI 개요
 </div>
   <div class="layout-content-col span-6 with-callouts">
 
-<p>전형적인 안드로이드 앱은 액션바 및 앱 켠텐트 영역으로 구성되어 있습니다.</p>
+<p>전형적인 안드로이드 앱은 액션바와 앱 켠텐트 영역으로 이루어져 있습니다.</p>
 <ol>
 <li>
 <h4>메인 액션 바</h4>
-<p>앱의 명령 및 통제 센터입니다. 메인 액션 바에는 앱의 계층과 뷰를 탐색하고
-중요한 작업들을 다루는 요소들이 담겨 있습니다.</p>
+<p>앱의 명령 및 통제 센터입니다. 메인 액션 바는 앱의 계층과 뷰를 탐색하고
+중요한 작업을 다루는 요소를 담고 있습니다.</p>
 <p><a href="../patterns/actionbar.html">액션 바에 대한 세부 사항</a></p>
 </li>
 <li>
 <h4>뷰 컨트롤</h4>
-<p>사용자가 앱이 제공하는 여러 뷰를 전환하도록 합니다.
-뷰는 일반적으로 앱의 데이터를 다양하게 배치한 것이거나 다양한 기능적 측면으로 이루어져 있습니다.</p>
+<p>사용자가 앱이 제공하는 여러 뷰를 전환할 수 있습니다.
+뷰는 일반적으로 앱의 데이터를 다양하게 배치하거나 다양한 기능을 제공하도록 구성합니다.</p>
 </li>
 <li>
 <h4>컨텐트 영역</h4>
@@ -136,7 +136,7 @@ title: UI 개요
 </li>
 <li>
 <h4>분할 액션 바</h4>
-<p>분할 액션 바는 메인 액션바 아래 혹은 화면 하단에 표시되는 추가 바입니다.
+<p>분할 액션 바는 메인 액션바 아래나 화면 하단에 표시되는 추가 바입니다.
 이 예제의 분할 액션 바에는 메인 액션 바에 들어가지 못한 중요한 액션들이 옮겨져 있습니다.</p>
 </li>
 </ol>
